--- a/package.json
+++ b/package.json
@@ -1,38 +1,36 @@
 {
-  "name": "chaincalljs",
-  "version": "1.0.1",
-  "description": "function that make syncronous chain call pretty and effectively by using a single promise.",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "jest",
-    "start": "node src/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wootra/nopromise-chaincall.git"
-  },
-  "keywords": [
-    "nopromise",
-    "chaincall",
-    "nopromise-chaincall",
-    "chain",
-    "promise",
-    "call",
-    "chaincalljs"
-  ],
-  "author": "Songhyeon Jun (shjeon0730@gmail.com)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/wootra/nopromise-chaincall/issues"
-  },
-  "homepage": "https://github.com/wootra/nopromise-chaincall#readme",
-  "dependencies": {},
-  "devDependencies": {
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "sinon": "^8.0.1"
-  },
-  "directories": {
-    "test": "tests"
-  }
+	"name": "chaincalljs",
+	"version": "1.0.1",
+	"description": "function that make syncronous chain call pretty and effectively by using a single promise.",
+	"main": "src/index.js",
+	"scripts": {
+		"test": "vitest",
+		"start": "node src/index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/wootra/nopromise-chaincall.git"
+	},
+	"keywords": [
+		"nopromise",
+		"chaincall",
+		"nopromise-chaincall",
+		"chain",
+		"promise",
+		"call",
+		"chaincalljs"
+	],
+	"author": "Songhyeon Jun (shjeon0730@gmail.com)",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/wootra/nopromise-chaincall/issues"
+	},
+	"homepage": "https://github.com/wootra/nopromise-chaincall#readme",
+	"devDependencies": {
+		"typescript": "^5.5.3",
+		"vitest": "^1.6.0"
+	},
+	"directories": {
+		"test": "tests"
+	}
 }
