--- a/package.json
+++ b/package.json
@@ -2,10 +2,30 @@
 	"name": "chaincalljs",
 	"version": "2.0.0",
 	"description": "function that make syncronous chain call pretty and effectively by using a single promise.",
-	"main": "src/index.js",
+	"main": "dist/index.js",
+	"module": "dist/index.mjs.js",
+	"types": "src/index.ts",
+	"files": [
+		"dist",
+		"src"
+	],
 	"scripts": {
 		"test": "vitest",
-		"start": "node src/index.js"
+		"build": "npm run lint; tsc --noEmit;npm run build:bundle",
+		"build:bundle": "npm run build:js && npm run build:types",
+		"build:js": "rollup -c rollup.config.mjs",
+		"build:types": "tsc --emitDeclarationOnly && rollup -c rollup.config.dts.mjs",
+		"dev": "rollup -c rollup.config.mjs -w",
+		"type-check": "tsc --noEmit",
+		"pretest": "npm run build",
+		"lint": "eslint . --max-warnings 0",
+		"patch": "sh ./publish.sh patch",
+		"minor": "sh ./publish.sh minor",
+		"major": "sh ./publish.sh major",
+		"prepatch": "sh ./publish.sh prepatch",
+		"preminor": "sh ./publish.sh preminor",
+		"premajor": "sh ./publish.sh premajor",
+		"publish-now": "npm publish --access public"
 	},
 	"repository": {
 		"type": "git",
@@ -27,7 +47,27 @@
 	},
 	"homepage": "https://github.com/wootra/nopromise-chaincall#readme",
 	"devDependencies": {
-		"typescript": "^5.5.3",
+		"@babel/core": "^7.24.7",
+		"@babel/preset-env": "^7.24.7",
+		"@eslint/js": "^9.6.0",
+		"@rollup/plugin-babel": "^6.0.4",
+		"@rollup/plugin-commonjs": "^26.0.1",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-terser": "^0.4.4",
+		"@rollup/plugin-typescript": "^11.1.6",
+		"@turbo/gen": "^1.12.4",
+		"@types/eslint": "^8.56.5",
+		"@types/node": "^20.11.24",
+		"@types/react": "^18.2.61",
+		"@types/react-dom": "^18.2.19",
+		"@typescript-eslint/parser": "^7.15.0",
+		"eslint": "^9.6.0",
+		"globals": "^15.8.0",
+		"rollup": "^4.18.0",
+		"rollup-plugin-dts": "^6.1.1",
+		"rollup-plugin-peer-deps-external": "^2.2.4",
+		"typescript": "^5.4.5",
+		"typescript-eslint": "^7.15.0",
 		"vitest": "^1.6.0"
 	},
 	"directories": {
