--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
 		"patch": "sh ./publish.sh patch",
 		"minor": "sh ./publish.sh minor",
 		"major": "sh ./publish.sh major",
-		"prepatch": "sh ./publish.sh prepatch",
-		"preminor": "sh ./publish.sh preminor",
-		"premajor": "sh ./publish.sh premajor",
+		"pre-patch": "sh ./publish.sh prepatch",
+		"pre-minor": "sh ./publish.sh preminor",
+		"pre-major": "sh ./publish.sh premajor",
 		"publish-now": "npm publish --access public"
 	},
 	"repository": {
