--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "chaincalljs",
 	"version": "2.1.0",
-	"description": "function that make syncronous chain call pretty and effectively by using a single promise.",
+	"description": "function that make syncronous chain call pretty and effectively.",
 	"main": "dist/index.js",
 	"module": "dist/index.mjs.js",
 	"types": "src/index.ts",
